# dx_cluster_mcp_server

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  check_nginx_setup.sh  docker-compose.host-nginx.yml  docker-compose.nginx-proxy.yml  docker-compose.production.yml  docker-compose.yml  nginx-config-example.conf  pyproject.toml  requirements.txt  test_mcp_client.py  test_server.py
docs/: NGINX_INTEGRATION.md
scripts/: generate_certs.sh
src/dx_cluster_mcp_server/: __init__.py  config.py  constants.py  dx_client.py  mcp_handlers.py  models.py  oauth.py  server.py  utils.py
